src/main/default/objects/Review__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <formula>HYPERLINK( Job_Application__r.Candidate__r.Id ,  Job_Application__r.Candidate__r.First_Name__c   &amp;  &quot; &quot;  &amp; Job_Application__r.Candidate__r.Last_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate</label>
    <type>Text</type>
</CustomField>