src/main/default/objects/Review__c/validationRules/Rating_Scale_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Scale_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Rating__c &lt;1 &amp;&amp; Rating__c &gt;=5</errorConditionFormula>
    <errorMessage>Invalid rating. Rating must be
between 1 and 5.</errorMessage>
</ValidationRule>